kube/grafana-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: garion-grafana-deployment
  labels:
    app: garion-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garion-grafana
  template:
    metadata:
      labels:
        app: garion-grafana
    spec:
      containers:
      - name: garion-grafana
        image: grafana/grafana:9.4.7
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: datasources
          mountPath: /etc/grafana/provisioning/datasources/datasource.yml
          subPath: datasources.yml
      volumes:
      - name: datasources
        configMap:
          name: grafana-datasource-config
