kube/loki-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: garion-1
  name: garion-loki-deployment
  labels:
    app: garion-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garion-loki
  template:
    metadata:
      labels:
        app: garion-loki
    spec:
      containers:
      - name: garion-loki
        image: grafana/loki:2.9.0
        ports:
        - containerPort: 3100
        command: ["-config.file=/etc/loki/local-config.yaml"]
