kube/collector-svc.yml
apiVersion: apps/v1
kind: Service
metadata:
  namespace: garion-1
  name: otel-collector-service

apiVersion: v1
kind: Service
metadata:
  namespace: garion-1
  name: otel-collector-service
spec:
  type: ClusterIP
  selector:
    app: garion-otel-collector
  ports:
    - port: 80
      targetPort: 8080
