kube/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: garion-1
  name: garion-grafana-service
spec:
  type: ClusterIP
  selector:
    app: garion-grafana
  ports:
    - port: 3000
      targetPort: 3000
