kube/loki-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: loki-service

apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: loki-service
spec:
  type: ClusterIP
  selector:
    app: garion-loki
  ports:
    - port: 3100
      targetPort: 3100
