kube/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${GITHUB_RUN_ID}
  name: garion-blazor-service
spec:
  type: ClusterIP
  selector:
    app: garion-blazor-web
  ports:
    - port: 8080
      targetPort: 8080
