kube/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: garion-1
  name: garion-grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.garion-telemetry-ts.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garion-grafana-service
            port:
              number: 3000
