kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: garion-blazor-ingress
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-garion-production
spec:
  tls:  
  - hosts:
    - ${SUBDOMAIN}.garion-telemetry-ts.duckdns.org
    secretName: garion-kube-tls-production-${SUBDOMAIN}
  ingressClassName: nginx
  rules:
  - host: ${SUBDOMAIN}.garion-telemetry-ts.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garion-blazor-service
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: garion-blazor-ingress
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-garion-production
spec:
  tls:  
  - hosts:
    - ${SUBDOMAIN}.garion-kube.duckdns.org
    secretName: garion-kube-ts-tls-production-${SUBDOMAIN}
  ingressClassName: nginx
  rules:
  - host: ${SUBDOMAIN}.garion-kube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garion-blazor-service
            port:
              number: 8080
